# shafiles

./: Cargo.toml
src/: cli.rs  main.rs  sha_state.rs
