[package]
name = "shafiles"
version = "0.1.0"
authors = ["Steve <stevemflanagan@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
vergen = "3.1.0"

[dependencies]
log = "0.4.11"
stderrlog = "0.4.3"
anyhow = "1.0.32"
crossbeam-channel = "0.4.3"
structopt = "0.3.16"
chrono = "0.4.13"
sha1 = {version = "0.6.0", features = ["serde"]}
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
lazy_static = "1.4.0"

